src/objects/Training_Session__c.object
<CustomObject>
    <description>Training sessions for new initiatives</description>
    <fields>
        <fullName>Date_of_Session__c</fullName>
        <description>date of training session</description>
        <inlineHelpText>Date training session will be held</inlineHelpText>
        <label>Date of Session</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initiative__c</fullName>
        <description>Initiative training session is for</description>
        <label>Initiative</label>
        <picklist>
            <picklistValues>
                <fullName>ETP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Language training class will be taught in</description>
        <label>Language</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Training Sessions</relationshipLabel>
        <relationshipName>Training_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <description>Status of training session</description>
        <inlineHelpText>Hotels can only be added to open training sessions</inlineHelpText>
        <label>Registration Status</label>
        <picklist>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Training Session</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_of_Session__c</columns>
        <columns>Initiative__c</columns>
        <columns>Language__c</columns>
        <columns>Registration_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TS-{00000000}</displayFormat>
        <label>Training Session Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>